--- a/css/index.css
+++ b/css/index.css
@@ -388,3 +388,90 @@ div{
     color:#3e3a39;
     font-family: "微软雅黑";
 }
+.blank{
+    display:block;
+    width:100%;
+    height:20px;
+    line-height:0;
+    font-size:0;
+    clear:both;
+    overflow:hidden;
+}
+.footpartner{
+    width:980px;
+    margin:0 auto 25px;
+    text-align: center;
+}
+.cxwz{
+    background:url(../images/spritesbgtop.png) no-repeat scroll 0 -581px transparent;
+    display: inline-block;
+    height:42px;
+    width:113px;
+    margin:0 10px;
+}
+.cnga{
+    background:url(../images/spritesbgtop.png) no-repeat scroll 0 -629px transparent;
+    display:inline-block;
+    height:45px;
+    width:156px;
+    margin:0 10px;
+}
+.wsjybzzx{
+    background:url(../images/spritesbgtop.png) no-repeat scroll 0 -675px transparent;
+    display: inline-block;
+    height:42px;
+    width:96px;
+    margin:0 10px;
+}
+.baxx{
+    background:url(../images/spritesbgtop.png) no-repeat scroll -97px -675px transparent;
+    display: inline-block;
+    height:42px;
+    width:101px;
+    margin:0 10px;
+}
+.qn{
+    background: url(../images/spritesbgtop.png) no-repeat scroll -202px -675px transparent;
+    display: inline-block;
+    height:42px;
+    width:42px;
+    margin:0 10px;
+}
+.cctv{
+    width:120px;
+    height:39px;
+    background: url(../images/1.jpg) no-repeat scroll transparent;
+    background-size:120px 39px;
+    display:inline-block;
+    margin:0 10px;
+}
+#suspend{
+    position:fixed;
+    right:10px;
+    bottom:20px;
+    width:73px;
+    height:205px;
+    border:1px solid #b81b22;
+    border-bottom:none;
+    margin-bottom: 30px;
+}
+#suspend ul li{
+    width:73px;
+    border-bottom:1px solid #b81b22;
+}
+#suspend ul li a{
+    display: block;
+    width:73px;
+}
+#suspend ul .down a{
+    height:76px;
+    background:url(../images/baywindow.png) no-repeat -1px -1px;
+}
+#suspend ul .service a{
+    height:71px;
+    background:url(../images/baywindow.png) no-repeat -1px -78px;
+}
+#suspend ul .goTop a{
+    height:55px;
+    background:url(../images/baywindow.png) no-repeat -1px -149px;
+}
