--- a/css/index.css
+++ b/css/index.css
@@ -662,3 +662,45 @@ div{
     font-size:16px;
     padding-left:10px;
 }
+#pbl{
+    overflow: hidden;
+    width:1200px;
+}
+#pbl h2{
+    text-align:center;
+    line-height:50px;
+    margin:30px 0;
+    font-family: "微软雅黑";
+    color:#9a9a9a;
+    font-size:18px;
+    font-weight:normal;
+    float: clean;
+}
+#pbl ul li{
+    width:285px;
+    height:508px;
+    float:left;
+    display: inline;
+    margin-right:10px;
+    margin-bottom:20px;
+}
+#pbl ul li img{
+    width:100%;
+    height:438px
+}
+#pbl ul li h3{
+    height:28px;
+    padding: 20px 12px;
+    line-height:28px;
+    border:1px solid #e8e7ec;
+    border-top:0;
+    font-family: "微软雅黑";
+    font-size:14px;
+}
+#pbl ul li h3 span{
+    float: right;
+    color: #a10000;
+    font-family: Arial;
+    line-height: 24px;
+    font-size: 14px;
+}
